JVM的逃逸代码实例分析-补充代码